<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/fab_margin"
    android:orientation="vertical"
    >
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="400dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="400dp"
            android:orientation="vertical">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/frTitulo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/fab_margin">
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/ingTitulo"
                    android:inputType="text"/>

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/frDescripcion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/fab_margin">
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/ingDescripcion"
                    android:inputType="text"/>

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/frcomentario"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/fab_margin">
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/ingcOMENTARIO"
                    android:inputType="text"/>

            </android.support.design.widget.TextInputLayout>


            <android.support.design.widget.TextInputLayout
                android:id="@+id/frImagen"
                android:layout_width="match_parent"
                android:layout_height="205dp">

                <ImageView
                    android:layout_width="@dimen/AnchoImagen"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/fab_margin"
                    android:layout_gravity="center"
                    />

            </android.support.design.widget.TextInputLayout>


        </LinearLayout>
    </ScrollView>



</LinearLayout>